--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-body{
+body {
     height: 100%;
-    background-color: bisque;
-}
-input[type=submit] {
-    width: 100px;
-    height: 100px;
+    background-color: blue;
 }
