--- a/style.css
+++ b/style.css
@@ -18,43 +18,50 @@ body {
 
 .reset {
     padding-top: 25px;
+    border-radius: 12px;
 }
 
 input[name="startscale"] {
     background-color: green; /* Green */
-    border: none;
-    width: 90px;
+    width: 180px;
     height: 90px;
     color: white;
-    padding: 15px 32px;
+    padding: 20px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
+    text-decoration: none;
     font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 12px;
 }
 
 input[name="stopscale"] {
     background-color: red; /* Red */
     border: none;
-    width: 90px;
+    width: 180px;
     height: 90px;
     color: white;
-    padding: 15px 32px;
+    padding: 20px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
+    text-decoration: none;
     font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 12px;
+
 }
 
 input[name="resetscale"] {
     background-color: grey; /* Grey */
     border: none;
-    width: 90px;
+    width: 180px;
     height: 90px;
     color: white;
-    padding: 15px 32px;
+    padding: 20px;
+    display: inline-block;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 12px;
 }
