--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 
 .reset {
     padding-top: 25px;
-    border-radius: 12px;
 }
 
 input[name="startscale"] {
@@ -32,7 +31,8 @@ input[name="startscale"] {
     text-decoration: none;
     font-size: 16px;
     margin: 4px 2px;
-    border-radius: 12px;
+    border-radius: 20px;
+    -webkit-appearance: none;
 }
 
 input[name="stopscale"] {
@@ -47,8 +47,8 @@ input[name="stopscale"] {
     text-decoration: none;
     font-size: 16px;
     margin: 4px 2px;
-    border-radius: 12px;
-
+    border-radius: 20px;
+    -webkit-appearance: none;
 }
 
 input[name="resetscale"] {
@@ -63,5 +63,6 @@ input[name="resetscale"] {
     text-decoration: none;
     font-size: 16px;
     margin: 4px 2px;
-    border-radius: 12px;
+    border-radius: 20px;
+    -webkit-appearance: none;
 }
